# bragi

./: README.md  index.html  package-lock.json  package.json  shell.nix
.github/workflows/: main.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  command.rs  lib.rs  main.rs  menu.rs
src-tauri/src/log/: mod.rs
src-tauri/src/player/: mod.rs  playtime.rs  queue.rs  track.rs
src-tauri/src/util/: mod.rs
src-tauri/tests/: track.rs
src/components/: Playlist.css  Playlist.tsx  ProgressBar.css  ProgressBar.tsx  TrackInfo.css  TrackInfo.tsx  Volume.css  Volume.tsx
src/interfaces/: track.ts
src/tests/: util.test.ts
src/util/: poll.ts  time.ts
