[package]
name = "bragi"
version = "0.1.0"
description = "A music player"
authors = ["Andrei Lubinets"]
license = "GPL-3.0"
repository = "https://github.com/AndreiLubinets/bragi"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-open", "shell-open"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.37", features = ["rt", "macros"] }
rodio = "0.17"
audiotags = "0.5"
anyhow = "1.0.81"
log = "0.4"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
mp3-duration = "0.1.10"
clap = { version = "4.5.0", features = ["derive"] }

[dev-dependencies]
temp-dir = "0.1.13"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
